hphp/hack/test/typecheck/like_types/dynamic_coercion/static_method.php.exp
File "static_method.php", line 8, characters 10-14:
Invalid argument (Typing[4110])
File "static_method.php", line 7, characters 28-30:
Expected int
File "static_method.php", line 4, characters 17-23:
But got dynamic
